force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Deposit_Type_External__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Type_External__c</fullName>
    <inlineHelpText>Type of Security deposit amount</inlineHelpText>
    <label>_Deposit Type External</label>
    <length>200</length>
    <type>Text</type>
</CustomField>