force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Disclaimers__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Disclaimers__c</fullName>
    <label>Disclaimers</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>