force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Domestic_Foreign__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Domestic_Foreign__c</fullName>
    <label>Domestic/Foreign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>