force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Early_Purchase_Option_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_Purchase_Option_Date__c</fullName>
    <label>Z_Unused_2103 Purchase Option Date</label>
    <type>Date</type>
</CustomField>