force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Early_Purchase_Option_Exercise_Start__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_Purchase_Option_Exercise_Start__c</fullName>
    <label>Z_Unused_2103 EarlyPurchaseOpt. Ex.Start</label>
    <type>Date</type>
</CustomField>