force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Early_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_Purchase_Price__c</fullName>
    <label>Z_Unused_2103 Purchase Option Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>