force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Early_Termination_Exercise_Period_Expire__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_Termination_Exercise_Period_Expire__c</fullName>
    <formula>false</formula>
    <label>Z_Unused_2103 Early TerminationOpt. Exp.</label>
    <type>Checkbox</type>
</CustomField>