force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__End_of_Lease_Options_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_of_Lease_Options_Comments__c</fullName>
    <label>End of Lease Options Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>