force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__EngineLocation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__EngineLocation__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Location</label>
    <type>Text</type>
</CustomField>