force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Escalation_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Escalation_Month__c</fullName>
    <description>Month in which escalation is effected yearly.</description>
    <inlineHelpText>Day 1 of month in which annual rent escalation applies</inlineHelpText>
    <label>Z_Unused_2002 Rent Escalation Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>