force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Expired_Extension_Option_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Expired_Extension_Option_F__c</fullName>
    <description>Indicates that the Maximum date to exercised the extension option has been reach and the Airline has not notify interest. This field depends on  the &quot;Maximum Notification Date&quot;</description>
    <formula>false</formula>
    <inlineHelpText>Indicates if the Maximum date for exercising the extention option has been reached.</inlineHelpText>
    <label>Z_Unused_2103 Renewal Option Expired</label>
    <type>Checkbox</type>
</CustomField>