force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Extended_On__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Extended_On__c</fullName>
    <inlineHelpText>Date on which the lease was extended</inlineHelpText>
    <label>Extended On</label>
    <type>Date</type>
</CustomField>