force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__First_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__First_Escalation_Date__c</fullName>
    <description>Date on which escalation is applied</description>
    <inlineHelpText>Date on which escalation is applied</inlineHelpText>
    <label>Z_Unused_2002 First Escalation Date</label>
    <type>Date</type>
</CustomField>