force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Float_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Float_Type__c</fullName>
    <label>Z_Unused_2306 Float Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>