force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Governing_Law_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Governing_Law_New__c</fullName>
    <inlineHelpText>Select one of the options from the picklist (dropdown).</inlineHelpText>
    <label>Governing Law</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The Laws of the State of New York</fullName>
            </value>
            <value>
                <fullName>The Laws of England and Wales</fullName>
            </value>
            <value>
                <fullName>The Law of the United Kingdom</fullName>
            </value>
            <value>
                <fullName>The Laws of California</fullName>
            </value>
            <value>
                <fullName>The Laws of England</fullName>
            </value>
            <value>
                <fullName>The Laws of the Netherlands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>