force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Grace_Period_After_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Grace_Period_After_Due_Date__c</fullName>
    <inlineHelpText>Indicates the number of days after the due date for which interest won&apos;t be charged. Valid entries are from 1 to 365, no decimals.</inlineHelpText>
    <label>Grace Period After Due Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>