force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Greentime_Lease_External__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Greentime_Lease_External__c</fullName>
    <label>_Greentime Lease External</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>