force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Guarantr__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Guarantr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.leaseworks__Subtype__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases (Guarantor)</relationshipLabel>
    <relationshipName>Leases8</relationshipName>
    <type>Lookup</type>
</CustomField>