force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Guaranty_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Guaranty_Type__c</fullName>
    <label>Guaranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter Of Credit</fullName>
            </value>
            <value>
                <fullName>Guarantee</fullName>
            </value>
            <value>
                <fullName>Bank Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>