force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Habitual_Base__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Habitual_Base__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Habitual Base</label>
    <referenceTo>leaseworks__Country__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>