force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Head_Lease_Sub_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Head_Lease_Sub_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the contract has a head lease/sub lease arrangement.</description>
    <inlineHelpText>Indicates if the contract has a head lease/sub lease arrangement.</inlineHelpText>
    <label>Head Lease/Sub Lease</label>
    <type>Checkbox</type>
</CustomField>