force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Head_Lesor_II__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Head_Lesor_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Lessor II</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases (Head Lessor II)</relationshipLabel>
    <relationshipName>Leases3</relationshipName>
    <type>Lookup</type>
</CustomField>