force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__If_Other_Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__If_Other_Please_Specify__c</fullName>
    <label>Z_Unused_2103Termination RedeliveryCond.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>