force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Income_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Income_Method__c</fullName>
    <label>Income Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>