force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Insurance_Requirement_Template__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Insurance_Requirement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Requirement Template</label>
    <referenceTo>leaseworks__Insurance_Template__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>