force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Interest_Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Accounting_Method__c</fullName>
    <label>Interest Accounting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accrual</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>