force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Calculation_Method__c</fullName>
    <description>Select how interest is calculated for this contract. Previous Balance: Interest is calculated based on the balance at the start of the day. Adjusted Balance: Interest is calculated based on the balance at the end of the day, after any transactions.</description>
    <inlineHelpText>Select how interest is calculated for this contract. Previous Balance: Interest is calculated based on the balance at the start of the day. Adjusted Balance: Interest is calculated based on the balance at the end of the day, after any transactions.</inlineHelpText>
    <label>Interest Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous Balance</fullName>
            </value>
            <value>
                <fullName>Adjusted Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>