force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Interest_Rate_Tier__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Rate_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest Rate Tier</label>
    <referenceTo>leaseworks__Interest_Rate_Tier__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>