force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Invoice_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Lead_Days__c</fullName>
    <label>Invoice Lead Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>