force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__IP_Compressor_Allocation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IP_Compressor_Allocation__c</fullName>
    <label>Z_Unused_2306 IP Compressor Allocation%</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>