force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Is_sd_Returned__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_sd_Returned__c</fullName>
    <formula>if(AND( leaseworks__Remaining_SD_Cash_LoC__c ==0.0, leaseworks__Is_Deposit_Received__c) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the box is checked, this indicates that there is no value remaining in with the Cash or LoC security deposits.</inlineHelpText>
    <label>Deposit Returned?</label>
    <type>Checkbox</type>
</CustomField>