force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Japanese_Consumption_Tax__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Japanese_Consumption_Tax__c</fullName>
    <inlineHelpText>Japanese Consumption Tax (Percentage)</inlineHelpText>
    <label>Z_unused_2401 Japanese Consumption Tax</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>