force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Latest_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Latest_Period__c</fullName>
    <description>Source: Fortress. Used to calculated remaining contractual rent.</description>
    <label>Latest Period</label>
    <summarizedField>leaseworks__Invoice__c.leaseworks__Period__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Invoice__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Rent</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Invoice__c.leaseworks__Lease__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>