force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lease_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Contract_Date__c</fullName>
    <inlineHelpText>Do not use this field - it is the same as &apos;Contract Signed Date&apos;</inlineHelpText>
    <label>Lease Contract Date</label>
    <type>Date</type>
</CustomField>