force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_End_Date__c</fullName>
    <description>End date of the lease</description>
    <label>Z_Unused_2106 Lease Expiry Date</label>
    <type>DateTime</type>
</CustomField>