force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lease_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Id__c</fullName>
    <description>Unique Lease Number</description>
    <formula>/*(IF( !ISBLANK(Y_Hidden_Lease_Id__c), 
(&#39;Lease&#39;&amp;&#39;-&#39;&amp;RIGHT(&#39;0000&#39; &amp; TEXT( Y_Hidden_Lease_Id__c ),5)), NULL))*/ 

null</formula>
    <label>Z_Unused_2101 Lease Id</label>
    <type>Text</type>
</CustomField>