force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lease_Id_External__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Id_External__c</fullName>
    <description>External Unique ID field used as a reference for data mapping to capture and display information from another external system.</description>
    <externalId>true</externalId>
    <inlineHelpText>External Unique ID field used as a reference for data mapping to capture and display information from another external system.</inlineHelpText>
    <label>Lease Id (External)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>