force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lease_Start_Date_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Start_Date_New__c</fullName>
    <label>Contract Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>