force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lease_Type_Legal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Type_Legal__c</fullName>
    <description>Soruce: Volito. Asana: Lease Summary</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance Lease</fullName>
            </value>
            <value>
                <fullName>Operating Lease</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>