force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lease_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Type_Status__c</fullName>
    <inlineHelpText>Select the appropriate status of the lease, and remember to update the dates section if necessary</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOI</fullName>
                <default>true</default>
                <label>LOI</label>
            </value>
            <value>
                <fullName>Awaiting Delivery</fullName>
            </value>
            <value>
                <fullName>On Lease</fullName>
            </value>
            <value>
                <fullName>Redelivered</fullName>
            </value>
            <value>
                <fullName>Lease Expired/Terminated</fullName>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>On Lease [R]</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Sold On Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>