force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lesor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lessor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases (Lessor)</relationshipLabel>
    <relationshipName>Leases4</relationshipName>
    <type>Lookup</type>
</CustomField>