force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source : Fortress. Ability to have Lessee different from Operator. Asana - Operator and Lessee could be different. Operator hierarchy needed.</description>
    <label>Z_Unused_OP Lessee</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Leases (Lessee)</relationshipLabel>
    <relationshipName>Leases_As_Lessees</relationshipName>
    <type>Lookup</type>
</CustomField>