force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessee_Bank_Account_Number_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Bank_Account_Number_New__c</fullName>
    <formula>/*Operator__r.Bank_Account_Number__c*/Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP Lessee Bank Account Number</label>
    <type>Text</type>
</CustomField>