force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessee_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Bank_Name__c</fullName>
    <formula>/*Operator__r.Bank_Name__c*/Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP Lessee Bank Name</label>
    <type>Text</type>
</CustomField>