force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessee_Bank_Routing_Number_For_MR_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Bank_Routing_Number_For_MR_New__c</fullName>
    <formula>/*Operator__r.Bank_Routing_Number_For_MR__c*/Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP Lessee Bank Rutng No For MR</label>
    <type>Text</type>
</CustomField>