force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessee_Bank_Routing_Number_For_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Bank_Routing_Number_For_Rent__c</fullName>
    <formula>/*Operator__r.Bank_Routing_Number_For_Rent__c*/Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP Lessee Bnk Rutng No For Rent</label>
    <type>Text</type>
</CustomField>