force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessee_IBAN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_IBAN__c</fullName>
    <formula>/*Operator__r.IBAN__c*/Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP Lessee IBAN</label>
    <type>Text</type>
</CustomField>