force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessee_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_New__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source : Fortress. Ability to have Lessee different from Operator. Asana - Operator and Lessee could be different. Operator hierarchy needed.</description>
    <inlineHelpText>Lookup to Accounts. Start typing the name until a match is presented. Click the magnifying glass to see a list.</inlineHelpText>
    <label>Lessee</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases (Lessee)</relationshipLabel>
    <relationshipName>Leases_As_Lessees_New</relationshipName>
    <type>Lookup</type>
</CustomField>