force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessor_Act_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Act_Name__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2106 Lessor Account Name for MR</label>
    <type>Text</type>
</CustomField>