force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessor_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Bank_Account_Number__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2106 LessorBank AccountNo.forMR</label>
    <type>Text</type>
</CustomField>