force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessor_Bank_Account_Number_LSR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Bank_Account_Number_LSR__c</fullName>
    <label>_Lessor Bank Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>